plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation "org.mapstruct:mapstruct:1.5.5.Final"
	implementation 'org.hibernate.orm:hibernate-core:6.5.0.Final'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'
	testCompileOnly 'org.projectlombok:lombok:1.18.34'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'org.springframework.security:spring-security-crypto'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.mindrot:jbcrypt:0.4'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.security:spring-security-oauth2-jose'
	implementation('org.springframework.boot:spring-boot-starter-security') {
		exclude group: 'org.apache.httpcomponents', module: 'httpclient'
	}
	implementation('org.springframework.boot:spring-boot-starter-oauth2-resource-server') {
		exclude group: 'org.apache.httpcomponents', module: 'httpclient'
	}
	implementation('org.springframework.security:spring-security-oauth2-jose') {
		exclude group: 'org.apache.httpcomponents', module: 'httpclient'
	}

	// test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()

	doFirst {
		def byteBuddyAgent = configurations.testRuntimeClasspath.find { it.name.contains('byte-buddy-agent') }
		if (byteBuddyAgent != null) {
			jvmArgs "-javaagent:${byteBuddyAgent.absolutePath}"
		} else {
			println "WARNING: byte-buddy-agent not found in testRuntimeClasspath!"
		}
	}
}
